--- a/src/app/explore-container/explore-container.component.html
+++ b/src/app/explore-container/explore-container.component.html
@@ -1,4 +1,4 @@
 <div id="container">
   <strong>{{ name }}</strong>
-  <p><a rel="noopener noreferrer" href="{{navigate}}">Create New</a></p>
+  <p><a rel="noopener noreferrer" (click)="redirect(navigate)">Add New</a></p>
 </div>
