--- a/src/app/chat/messages/messages.page.html
+++ b/src/app/chat/messages/messages.page.html
@@ -1,6 +1,6 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>User 1</ion-title>
+    <ion-title>{{to}}</ion-title>
     <ion-button slot="start" size="small" fill="clear" (click)="backButton()">
         <ion-icon name="chevron-back-outline"></ion-icon>&nbsp;
     </ion-button>
@@ -8,14 +8,15 @@
 </ion-header>
 
 <ion-content>
+  <app-explore-container name="Messages is empty"></app-explore-container>
   <ion-list>
-    <ion-item-sliding *ngFor="let item of itemList">
+    <ion-item-sliding *ngFor="let item of messages">
       <ion-item>
         <ion-avatar slot="start">
           <img src="https://gravatar.com/avatar/dba6bae8c566f9d4041fb9cd9ada774{{item}}?d=identicon&f=y">
         </ion-avatar>
         <span class="ion-margin-vertical">
-          <ion-label>User {{item}}</ion-label>
+          <ion-label>{{item}}</ion-label>
           <ion-text style="font-size: 14px; color: var(--ion-color-step-600, #666666);">Notes are text elements generally used as subtitles that provide more information. Notes are styled to appear grey by default. Notes can be used in an item as metadata text.</ion-text>
         </span>
       </ion-item>
@@ -26,12 +27,15 @@
     </ion-item-sliding>
   </ion-list>
   <br>
+  <ion-refresher slot="fixed" (ionRefresh)="doRefresh($event)">
+    <ion-refresher-content></ion-refresher-content>
+  </ion-refresher>
 </ion-content>
 
 <ion-footer collapse="fade" style="box-shadow: rgb(0 0 0 / 10%) 0px 0px 25px 1px;">
   <ion-item>
     <ion-textarea class="ion-align-self-center" style="max-height: 200px!important;" auto-grow="true" (ionFocus)="writing()" (ionBlur)="stopWriting()" (ionChange)="editText()" [(ngModel)]="newMessage" placeholder="Enter message here..."></ion-textarea>
-    <ion-button slot="end" fill="clear" class="ion-align-self-center">
+    <ion-button slot="end" fill="clear" class="ion-align-self-center" (click)="send()">
       <ion-icon name="send"></ion-icon>
     </ion-button>
   </ion-item>
