--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -19,26 +19,34 @@
     </ion-toolbar>
   </ion-header>
 
-  <app-explore-container name="Chat Empty" navigate="tabs/chat/add-chat"></app-explore-container>
+  <app-explore-container *ngIf="empty" name="Chat Empty" navigate="tabs/contact"></app-explore-container>
 
   <ion-list>
-    <ion-item-sliding *ngFor="let item of itemList">
-      <ion-item (click)="openChat(item)">
+    <ion-item-sliding *ngFor="let item of chats">
+      <ion-item (click)="openChat(item.id)">
         <ion-avatar class="ion-margin-vertical ion-margin-end">
-          <img src="https://gravatar.com/avatar/dba6bae8c566f9d4041fb9cd9ada774{{item}}?d=identicon&f=y">
+          <img src="{{item.avatar}}">
         </ion-avatar>
         <ion-label>
-          <h3>User {{item}}</h3>
-          <p>Whether auto correction should be enabled when the user is entering/editing the text value.</p>
+          <h3>{{item.name}}</h3>
+          <p *ngIf="!item.messages;else message">...</p>
+          <ng-template #message>
+            <p>Whether auto correction should be enabled when the user is entering/editing the text value.</p>
+          </ng-template>
         </ion-label>
         <ion-note slot="end">
           <ion-text color="success" *ngIf="newMessage; else read">
-            <small>10:45 AM</small>
+            <small>{{item.updated_at | date:"shortTime"}}</small>
           </ion-text>
           <ng-template #read>
-            <ion-text color="medium">
-              <small>10:45 AM</small>
+            <ion-text color="medium" *ngIf="!item.today; else today">
+              <small>{{item.updated_at | date:"mediumDate"}}</small>
             </ion-text>
+            <ng-template #today>
+              <ion-text color="medium">
+                <small>{{item.updated_at | date:"shortTime"}}</small>
+              </ion-text>
+            </ng-template>
           </ng-template>
         </ion-note>
       </ion-item>
@@ -48,5 +56,10 @@
       </ion-item-options>
     </ion-item-sliding>
   </ion-list>
+
   <br>
+
+  <ion-refresher slot="fixed" (ionRefresh)="doRefresh($event)">
+    <ion-refresher-content></ion-refresher-content>
+  </ion-refresher>
 </ion-content>
