--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -3,6 +3,9 @@
     <ion-title>
       Settings
     </ion-title>
+    <ion-button slot="end" size="small" fill="clear" (click)="manageUsers()" *ngIf="greaterThan(settingForm.role, 4)">
+      <ion-icon name="person-outline"></ion-icon>
+    </ion-button>
   </ion-toolbar>
 </ion-header>
 
